fix alignement of top right menu. fix #1889
add user panel link in bottom #1888

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -976,3 +976,11 @@ input[type='color'] {
 .input-border {
     border: 1px solid #ced4da;
 }
+
+/* bring the search and user menu a bit more on the left
+ * this is the only way I found that works
+ * adding row/columns will mess up the left alignement of the navbar
+ */
+#main-nav {
+    padding-right: 120px !important;
+}
